Crash when importing Collada file with bones. #38847

Closed
opened 2014-02-26 09:03:18 +01:00 by Phillip Stephens · 10 comments

When attmpting to load the this collada file I get a crash about a corrupted double linked list,
My OS is Arch Linux kernel 3.12.7-2

Blender 2.69 (sub 10), Commit date: 2014-01-25 08:01, Hash c7ac0ed
bpy.ops.object.delete(use_global=False) # Operator

backtrace
blender() [0x8c7a33]
/usr/lib/libc.so.6(+0x35400) [0x7f2be7957400]
/usr/lib/libc.so.6(__libc_malloc+0xba) [0x7f2be799e08a]
/usr/lib/libstdc++.so.6(_Znwm+0x1d) [0x7f2be737be9d]
blender(ZNSt8_Rb_treeIN9COLLADAFW8UniqueIdESt4pairIKS1_P6ObjectESt10_Select1stIS6_ESt4lessIS1_ESaIS6_EE17_M_insert_unique_ESt23_Rb_tree_const_iteratorIS6_ERKS6+0x3e) [0x109026e]
blender(_ZN16ArmatureImporter21create_armature_bonesEv+0x219) [0x109dd39]
blender(_ZN16DocumentImporter6finishEv+0x1e8) [0x1060488]
/usr/lib64/opencollada/libOpenCOLLADASaxFrameworkLoader.so(_ZN13COLLADASaxFWL6Loader12loadDocumentERKSsPN9COLLADAFW7IWriterE+0x1f7) [0x7f2be9a0e4e7]
blender(_ZN16DocumentImporter6importEv+0x100) [0x1064ca0]
blender(collada_import+0x2f) [0x10586cf]
blender() [0xbaa2f2]
blender() [0x8d0533]
blender() [0x8d0778]
blender(wm_event_do_handlers+0x1ae) [0x8d0a7e]
blender(WM_main+0x18) [0x8c9958]
blender(main+0xd7f) [0x8b12bf]
/usr/lib/libc.so.6(__libc_start_main+0xf5) [0x7f2be7943b05]
blender() [0x8c7304]

When attmpting to load the [this ](http://dl.dropboxusercontent.com/u/21757902/crash.dae) collada file I get a crash about a corrupted double linked list, My OS is Arch Linux kernel 3.12.7-2 Blender 2.69 (sub 10), Commit date: 2014-01-25 08:01, Hash c7ac0ed bpy.ops.object.delete(use_global=False) # Operator backtrace blender() [0x8c7a33] /usr/lib/libc.so.6(+0x35400) [0x7f2be7957400] /usr/lib/libc.so.6(__libc_malloc+0xba) [0x7f2be799e08a] /usr/lib/libstdc++.so.6(_Znwm+0x1d) [0x7f2be737be9d] blender(_ZNSt8_Rb_treeIN9COLLADAFW8UniqueIdESt4pairIKS1_P6ObjectESt10_Select1stIS6_ESt4lessIS1_ESaIS6_EE17_M_insert_unique_ESt23_Rb_tree_const_iteratorIS6_ERKS6_+0x3e) [0x109026e] blender(_ZN16ArmatureImporter21create_armature_bonesEv+0x219) [0x109dd39] blender(_ZN16DocumentImporter6finishEv+0x1e8) [0x1060488] /usr/lib64/opencollada/libOpenCOLLADASaxFrameworkLoader.so(_ZN13COLLADASaxFWL6Loader12loadDocumentERKSsPN9COLLADAFW7IWriterE+0x1f7) [0x7f2be9a0e4e7] blender(_ZN16DocumentImporter6importEv+0x100) [0x1064ca0] blender(collada_import+0x2f) [0x10586cf] blender() [0xbaa2f2] blender() [0x8d0533] blender() [0x8d0778] blender(wm_event_do_handlers+0x1ae) [0x8d0a7e] blender(WM_main+0x18) [0x8c9958] blender(main+0xd7f) [0x8b12bf] /usr/lib/libc.so.6(__libc_start_main+0xf5) [0x7f2be7943b05] blender() [0x8c7304]

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @PhillipStephens

Added subscriber: @PhillipStephens

I'm a derp, I didn't notice that I was getting redundant joints in there.

I'm a derp, I didn't notice that I was getting redundant joints in there.
Gaia Clary was assigned by Sergey Sharybin 2014-02-27 10:17:22 +01:00

Added subscribers: @GaiaClary, @Sergey

Added subscribers: @GaiaClary, @Sergey

@GaiaClary mind looking into the report?

@GaiaClary mind looking into the report?
Member

This dae file contains the same joints multiple times, e.g. these are Root bones:

  • L_Hip
  • R_Hip
  • Spine_1

But they also appear within the node "Skeleton_Root"

I believe that this is not supported by Blender. I will take care to catch this situation and let the importer send a notification to the console instead of crashing.

This dae file contains the same joints multiple times, e.g. these are Root bones: - L_Hip - R_Hip - Spine_1 But they also appear within the node "Skeleton_Root" I believe that this is not supported by Blender. I will take care to catch this situation and let the importer send a notification to the console instead of crashing.

This issue was referenced by blender/blender-addons-contrib@3111f08ad9

This issue was referenced by blender/blender-addons-contrib@3111f08ad956352e9dfeedb8600fb35b4e38543d

This issue was referenced by 3111f08ad9

This issue was referenced by 3111f08ad956352e9dfeedb8600fb35b4e38543d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 3111f08ad9.

Closed by commit 3111f08ad9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38847
No description provided.