Fix T38847: Reject reuse of child bones as root bones. That doesn't make sense anyways.